@@ -1,3 +1,11 @@
+time variables  In the XML files, one can specify that a variable can
+	be used as a time variable using an attribute time.  The value
+	of the attribute should be "yes" or "true".  (No upper case!)
+	Such variables can then be identified when creating a time
+	series plot.
+	
+
+
 statusbar is now non-editable by the user.
 
 parcoords_new and tsplot_new become *_with_vars
